--- a/akan-names.html
+++ b/akan-names.html
@@ -46,7 +46,12 @@
         <div class="imges">
 
         </div>
- 
+        <div class="output">
+            <div id="myAkan">
+                <h1>Waiting to process your Akan</h1>
+            </div>
+            <div id="reason"></div>
+        </div>
 
     </div>
 
