js file added link to find another

--- a/akan-names.html
+++ b/akan-names.html
@@ -43,7 +43,7 @@
           </div>
         </fieldset>
         <button type="button" class="btn btn-primary" id="button1" onclick="dateOfWeek();">Submit</button>
-        
+        <button type="button" class="btn btn-primary" id="button2" onclick="clearInput();">find another</button>
       </form>
       <p class="output" id="akanOutput"></p>
       </div>
