--- a/akan-names.html
+++ b/akan-names.html
@@ -11,11 +11,11 @@
       <div class="my-container">
 
         <div class="navigate">
-          <h1>know your Akan Name</h1>
+          <h1>KNOW YOUR AKAN NAME</h1>
           
         </div>  
         <div class="container">
-          <p id="para1">This web page allows you to determine your Akan name by choosing your birthday on the calendar picker.</p> 
+          <p id="para1"> <marquee>This web page allows you to determine your Akan name by choosing your birthday on the calendar picker.</marquee></p> 
           <form id="form1">
             <div class="form-group row">
               <label for="dateOfBirth" class="col-sm-3" col-form-label>Enter your birthday</label>
