--- a/akan-names.html
+++ b/akan-names.html
@@ -11,15 +11,15 @@
       <div class="my-container">
 
         <div class="navigate">
-          <h1>KNOW YOUR AKAN NAME</h1>
+          <h1 id="glow">KNOW YOUR AKAN NAME</h1>
           
-        </div>  
+        </div>  <br>
         <div class="container">
           <p id="para1"> <marquee>This web page allows you to determine your Akan name by choosing your birthday on the calendar picker.</marquee></p> 
           <form id="form1">
             <div class="form-group row">
               <label for="dateOfBirth" class="col-sm-3" col-form-label>Enter your birthday</label>
-              <div class="col-sm-9">
+              <div class="col-sm-6">
                 <input type="date" class="form-control" id="dateOfBirth">
               </div>
             </div>
