--- a/akan-names.html
+++ b/akan-names.html
@@ -23,18 +23,18 @@
                 <input type="date" class="form-control" id="dateOfBirth">
               </div>
             </div>
-        <fieldset class="form-group">
+        <fieldset class="form-group" onsubmit="return agrregateFunction()">
           <div class="row">
             <legend class="col-form-label col-sm-3 pt-0">Choose your gender</legend>
             <div class="col-sm-9">
               <div class="custom-control custom-radio">
-                <input class="custom-control-input" type="radio" id="maleGender" value="option1" name="custom-radio">
+                <input class="custom-control-input" type="radio" id="maleGender" value="option1" name="gender">
                 <label class="custom-control-label" for="maleGender">
                   Male
                 </label>
               </div>
               <div class="custom-control custom-radio">
-                <input class="custom-control-input" type="radio" id="femaleGender" value="option2" name="custom-radio">
+                <input class="custom-control-input" type="radio" id="femaleGender" value="option2" name="gender">
                 <label class="custom-control-label" for="femaleGender">
                   Female
                 </label>
